# instagramresmi

./: .gitignore  API.md  DEPLOYMENT.md  DEPLOY_QUICK.md  FIX_DATABASE.md  INTEGRATION_CHECKLIST.md  README.md  create_test_user.py  ensure_tables.py  fix_old_users.py  fix_posts_image_url.py  init_db.py  main.py  pyproject.toml  requirements.txt  setup_vps.sh  tailwind.config.js  update_db_schema.py  wsgi.py
app/: __init__.py  configs.py  extension.py  socketio_handlers.py  utils.py
app/forms/: commentForm.py  editPostForm.py  loginForm.py  passwordResetForm.py  postForm.py  signupForm.py
app/lib/: auth.py  email.py
app/middleware/: auth.py
app/models/: __init__.py  blocked_users.py  bookmarks.py  comments.py  conversations.py  follows.py  likes.py  messages.py  notifications.py  posts.py  stories.py  story_views.py  user_settings.py  users.py
app/routes/: auth_api.py  auth_bp.py  main_bp.py  messages_bp.py  notifications_bp.py  posts_bp.py  profiles_bp.py  stories_bp.py  users_api.py
app/static/: app-utils.js  globals.css  instagram-icons.css  instagram-theme.css  manifest.json  neon-interactions.js  neon-theme.css  service-worker.js
app/templates/: base.html  explore.html  feed.html  index.html  saved.html  search.html
app/templates/auth/: forgot_password.html  login.html  reset_password.html  signup.html
app/templates/components/: __init__.html  example_usage.html
app/templates/errors/: 404.html  500.html
app/templates/messages/: list.html  thread.html
app/templates/notifications/: view.html
app/templates/posts/: create.html  detail.html  (+2 more)
(+15 files in other folders)
