[project]
name = "instagram-clone"
version = "0.1.0"
description = "Instagram Clone - A full-featured social media application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "flask-caching>=2.1.0",
    "flask-socketio>=5.3.0",
    "python-dotenv>=1.1.1",
    "pillow>=10.0.0",
    "werkzeug>=3.0.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.0.0",
]

